recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps ==0){
    recule(lenght)
  }else{
    current(steps)
  	avance(length)
  	droite(angle)
    tree(steps-1, length*shrink, angle, shrink)
    tree(steps-1, length*shrink, -angle, shrink)
  }
  
}